--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     container_name: bank_card_app
     ports:
-      - "8080:8080"
+      - "8081:8081"
     environment:
       SPRING_PROFILES_ACTIVE: docker
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/bank_card
@@ -41,4 +41,4 @@ services:
 volumes:
   db_data:
 
-#//docker exec -it postgres_db psql -U super -d questionnaire
+#//docker exec -it postgres_db psql -U super -d bank_card
